Test Cases/V2/Test Case/Tests/TT-238 - VTO/Test Cases/Negative/TT_238_5_AddCoreFocus.tc
<?xml version="1.0" encoding="UTF-8"?>
<TestCaseEntity>
   <description></description>
   <name>TT_238_5_AddCoreFocus</name>
   <tag></tag>
   <comment></comment>
   <testCaseGuid>a38ae31a-c597-47ab-8624-b4d304eda633</testCaseGuid>
</TestCaseEntity>
